# otterlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  build.rs  flake.nix  justfile  roadmap.md  setup.ps1  setup.sh  structure.md
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/lexer/: Cargo.toml
crates/otterc_codegen/: Cargo.toml
crates/otterc_config/: Cargo.toml
crates/otterc_ffi/: Cargo.toml
crates/otterc_jit/: Cargo.toml
crates/otterc_jit/src/: engine.rs  executor.rs  lib.rs  tiered_compiler.rs
crates/otterc_jit/src/optimization/: call_graph.rs  inliner.rs  reoptimizer.rs
crates/otterc_metrics/: Cargo.toml
crates/otterc_runtime/: Cargo.toml
crates/otterc_runtime/src/: config.rs  introspection.rs  lib.rs  strings.rs
crates/otterc_runtime/src/jit/: engine.rs  executor.rs
crates/otterc_runtime/src/jit/specialization/: mod.rs
crates/otterc_runtime/src/stdlib/: builtins.rs  http.rs  io.rs  runtime.rs  sys.rs  task.rs  test.rs
crates/otterc_ty/: Cargo.toml
crates/utils/: Cargo.toml
docs/: API_REFERENCE.md  FFI_TRANSPARENT.md  GETTING_STARTED.md  LANGUAGE_SPEC.md  ROADMAP.md  STDLIB.md  TUTORIALS.md
examples/: pi_leibniz.otter
examples/basic/: enum_demo.ot  error_handling_advanced.ot  error_handling_basics.ot  error_handling_resource.ot  error_handling_validation.ot  exception_basics.ot  exception_resource.ot  exception_validation.ot  fibonacci.ot  (+4 more)
scripts/: examples.sh
src/: cli.rs  lib.rs
syntaxes/: otterlang.tmLanguage.json
tests/: TESTS.md  codegen_debug.ot  for_loop_test.ot
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json
(+141 files in other folders)
