[package]
name = "otterc_runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
task-runtime = []
toml-config = ["dep:toml"]
ffi-main = []

[dependencies]
otterc_config.path = "../otterc_config"
otterc_ffi.path = "../otterc_ffi"
otterc_metrics.path = "../otterc_metrics"
otterc_symbol.path = "../otterc_symbol"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
inventory = "0.3"
libc = "0.2"
libm = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.30"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
toml = { version = "0.8", optional = true }
ureq = { version = "2", default-features = true }

[lints]
workspace = true
